--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+
+.ing {
+  position: relative;
+  width: 500px;
+  height: 50px;
+  left: 50%;
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.ing:hover .end {
+  display: block;
+  color: red;
+  animation: move;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+}
+@keyframes move {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100px);
+  }
+}
+.end {
+  display: none;
+  position: absolute;
+  top: 65%;
+  left: 55%;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
