--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -25,7 +25,7 @@
   width: 460px;
   height: 300px;
   margin-top: 50px;
-  background-color: rgb(250, 250, 250);
+  background-color: white;
   border: 1px solid rgb(206, 206, 206);
   border-radius: 20px;
   display: flex;
@@ -41,35 +41,38 @@
   position: relative;
   border-radius: 10px;
   border: 1px solid rgb(197, 197, 197);
-  width: 300px;
+  width: 402px;
   height: 100px;
+  background-color: white;
 }
 .LoginInputIDPos {
-  width: 300px;
+  width: 400px;
   display: flex;
   border-bottom: 1px solid rgb(197, 197, 197);
 }
 .LoginInputPWPos {
-  width: 300px;
+  width: 400px;
   display: flex;
 }
 .LoginID {
-  width: 250px;
+  width: 350px;
   height: 45px;
   border: none;
   outline: none;
   left: 40px;
   position: relative;
   font-size: 16px;
+  background-color: white;
 }
 .LoginPW {
-  width: 250px;
+  width: 350px;
   height: 45px;
   border: none;
   outline: none;
   left: 40px;
   position: relative;
   font-size: 16px;
+  background-color: white;
 }
 .LoginInputIconID {
   background-image: url(/public/Loginicon.png);
@@ -79,8 +82,8 @@
   background-repeat: no-repeat;
   width: 16px;
   height: 16px;
-  margin-top: 8px;
-  margin-left: 10px;
+  margin-top: 15px;
+  margin-left: 13px;
 }
 .LoginInputIconPW {
   background-image: url(/public/Loginicon.png);
@@ -90,8 +93,8 @@
   background-repeat: no-repeat;
   width: 16px;
   height: 16px;
-  margin-top: 12px;
-  margin-left: 10px;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 .LoginBanner {
   width: 460px;
@@ -115,4 +118,102 @@
   height: 10px;
   position: relative;
   opacity: 0.5;
+}
+.IDLoginIcon {
+  background-image: url(/public/Loginicon.png);
+  background-size: 266px 225px;
+  background-position: -142px -172px;
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 16px;
+  position: relative;
+}
+.IDLoginText {
+  font-size: 18px;
+  margin-top: -5px;
+  margin-left: 10px;
+  font-weight: 500;
+}
+.LoginTopHeader {
+  display: flex;
+  width: 153px;
+  height: 41px;
+  position: relative;
+  background-color: white;
+  margin-left: 40px;
+}
+.LoginContinueBlock {
+  display: flex;
+  justify-content: space-between;
+  width: 140px;
+}
+.LoginContinue {
+  background-image: url(/public/Loginicon.png);
+  background-size: 266px 225px;
+  background-position: -244px -167px;
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 18px;
+  top: 2px;
+  position: relative;
+}
+/* .LoginContinue {
+  background-image: url(/public/Loginicon.png);
+  background-size: 266px 225px;
+  background-position: -244px -87px;
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 0;
+  left: 0;
+} */
+.IPSlideIcon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 2px;
+  width: 14px;
+  height: 14px;
+  margin-top: -7px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+  transition: all 0.1s ease;
+  box-sizing: border-box;
+}
+.IPSlideBack {
+  display: block;
+  position: relative;
+  width: 33px;
+  height: 18px;
+  margin: 0 auto;
+  border-radius: 12px;
+  background-color: #c3c8c9;
+  box-sizing: border-box;
+  margin-top: 3px;
+  margin-left: 4px;
+}
+.IPBlock {
+  display: flex;
+}
+.LoginSubfunction {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+  margin-top: 10px;
+}
+.LoginMainBt {
+  border-radius: 10px;
+  margin-top: 30px;
+  position: relative;
+  width: 400px;
+  height: 50px;
+  background-color: #03c75a;
+  color: white;
+  font-size: 20px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
