--- a/src/styles/M4.css
+++ b/src/styles/M4.css
@@ -17,14 +17,10 @@
 }
 .M4SubAdvertisement {
   width: 350px;
-  height: 314px;
-  background-color: rgb(252, 252, 252);
+  height: 200px;
+  /* background-color: rgb(252, 252, 252); */
   position: relative;
-  border: 1.5px solid rgb(236, 236, 236);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+  left: -5px;
 }
 .AdvertisementText {
   width: 1000px;
