--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -33,6 +33,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .LoginInput {
   display: flex;
@@ -158,17 +160,6 @@
   top: 2px;
   position: relative;
 }
-/* .LoginContinue {
-  background-image: url(/public/Loginicon.png);
-  background-size: 266px 225px;
-  background-position: -244px -87px;
-  background-repeat: no-repeat;
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  top: 0;
-  left: 0;
-} */
 .IPSlideIcon {
   display: block;
   position: absolute;
@@ -204,9 +195,8 @@
   width: 400px;
   margin-top: 10px;
 }
-.LoginMainBt {
+.LoginMainBtSuccess {
   border-radius: 10px;
-  margin-top: 30px;
   position: relative;
   width: 400px;
   height: 50px;
@@ -221,6 +211,37 @@
   border: none;
   outline: none;
 }
+.LoginMainBtFail {
+  border-radius: 10px;
+  position: relative;
+  width: 400px;
+  height: 50px;
+  top: 25px;
+  background-color: #03c75a;
+  color: white;
+  font-size: 20px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
 .LoginSignupBt {
   cursor: pointer;
+}
+.LoginFailText {
+  font-size: 13px;
+  color: red;
+  font-weight: 500;
+  width: 450px;
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+}
+.LoginSuccess {
+  display: none;
 }
