--- a/src/styles/M2LoginUser.css
+++ b/src/styles/M2LoginUser.css
@@ -16,11 +16,13 @@
   border-top: 1px solid rgb(236, 236, 236);
 }
 .M2UserProfileImg {
+  background-image: url(/public/myInfo.gif);
+  background-size: 56px 56px;
   width: 56px;
   height: 56px;
-  background-color: yellow;
   border-radius: 50%;
   margin-top: 10px;
+  border: 1px solid rgb(236, 236, 236);
 }
 .M2UserMainInfo {
   margin-left: 20px;
