--- a/src/Blog/BlogEditor.css
+++ b/src/Blog/BlogEditor.css
@@ -64,6 +64,11 @@
   top: 45px;
   left: -5px;
 }
+.EditorTopSection {
+  display: block;
+  position: relative;
+  top: 45px;
+}
 .EditorMainMenuSection {
   display: flex;
   width: 100vw;
@@ -234,8 +239,10 @@
 .FuncCatEditBtArea {
   position: relative;
   display: flex;
-  width: 227px;
-  height: 25px;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
 }
 .CatAddBt {
   position: relative;
@@ -249,7 +256,7 @@
 }
 .CatDelBt {
   position: relative;
-  left: 20px;
+  left: 10px;
   width: 44;
   height: 20px;
 }
@@ -281,13 +288,21 @@
   display: flex;
 }
 .FunCatDetailInfo {
+  display: flex;
+  align-items: center;
   font-size: 14px;
 }
 .FunCatDetailInfoTitle {
+  position: relative;
+  width: 100px;
+  height: 30px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 .FunCatDetailInfoArea {
   position: relative;
+  width: 400px;
   left: 30px;
 }
 .DBCatArea {
