--- a/src/Blog/BlogCategory.css
+++ b/src/Blog/BlogCategory.css
@@ -1,7 +1,6 @@
 .BlogContentCategory {
   width: 300px;
   height: 500px;
-  /* background-color: red; */
   display: flex;
   justify-content: center;
 }
@@ -69,7 +68,8 @@
   font-weight: 300;
   font-size: 13px;
   position: relative;
-  top: 2px;
+  top: 4px;
+  left: 2px;
 }
 .BlogCatAreaDashed {
   width: 145px;
