--- a/src/Blog/BlogContent.css
+++ b/src/Blog/BlogContent.css
@@ -62,7 +62,7 @@
 .BlogContentFixTop {
   display: block;
   width: 830px;
-  height: 50px;
+  height: 30px;
 }
 .BlogContentFixTopText {
   position: absolute;
@@ -73,11 +73,11 @@
 }
 .BlogContentBottom {
   display: flex;
-  position: absolute;
+  position: relative;
   right: 20px;
   justify-content: space-between;
   width: 165px;
-  margin-top: 40px;
+  right: -650px;
 }
 .ContentMemoIcon {
   display: block;
@@ -118,4 +118,11 @@
   width: 16px;
   height: 16px;
   background-position: -114px -160px;
+}
+.BlogContentMain {
+  display: block;
+  position: relative;
+  width: 830px;
+  padding: 30px 0 30px 0;
+  /* border-bottom: 1px solid grey; */
 }
