--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,7 +2,7 @@
   position: relative;
   bottom: -980px;
   background-color: #fdfdfd;
-  width: 100vw;
+  width: 100%;
   height: 423px;
   border-top: 1px solid #e4e8eb;
   display: flex;
