--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,3 +1,12 @@
+body {
+  width: 100%;
+}
+.mainsection {
+  position: relative;
+  display: inline-block;
+  width: 100vw;
+  height: auto;
+}
 .MainSpace {
   display: block;
   position: relative;
